# django-career-app

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml  workflow.yml
career_portal/: manage.py
career_portal/career_portal/: asgi.py  settings.py  urls.py  wsgi.py
career_portal/careers/: forms.py  llm_utils.py  models.py  tests.py  urls.py  utils.py  views.py
career_portal/careers/migrations/: 0001_initial.py  0002_remove_applicant_resume_pdf_url_applicant_ai_score_and_more.py  0003_tag_remove_applicant_ai_score_and_more.py  0004_remove_applicant_submission_date_and_more.py  0005_applicant_resume_markdown_and_more.py  0006_alter_companyprofile_description_and_more.py
career_portal/careers/templates/: base.html
career_portal/careers/templatetags/: markdown_extras.py
career_portal/django_career_app/: admin.py  tests.py
career_portal/django_career_app/templates/: base.html
django_career_app/: admin.py  apps.py  forms.py  llm_utils.py  models.py  tests.py  urls.py  views.py
django_career_app/django_career_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_career_app/migrations/: 0001_initial.py  0002_remove_applicant_resume_pdf_url_applicant_ai_score_and_more.py  0003_tag_remove_applicant_ai_score_and_more.py  0007_remove_applicant_email_remove_applicant_full_name_and_more.py  0008_remove_jobposting_location_companyprofile_name_and_more.py  0009_jobposting_company_profile.py
django_career_app/templates/: base.html
django_career_app/templatetags/: __init__.py
(+31 files in other folders)
